ДЗ №12: rm install dir when make uninstall, minor Doxyfile refactor

--- a/12_InstallPackaging/Makefile.am
+++ b/12_InstallPackaging/Makefile.am
@@ -9,6 +9,9 @@ install-data-local:
 	mkdir -p $(DESTDIR)/$(docdir)
 	cp -a doxygen-doc/html $(DESTDIR)/$(docdir)
 
+uninstall-local:
+	rm -rf $(DESTDIR)/$(docdir)
+
 http:	doxygen-doc
 	python3 -m http.server --directory $</html
 
